--- a/box.css
+++ b/box.css
@@ -1,25 +1,15 @@
-body {
-}
-}
-
-}
-}
-}
-}
-}
-}
-}
-}
-
-}
-}
-}
-}
-}
-}
-}
-}
-}
-}
-}
-}
+body { background-color: black;} #box {idth: 100px;
+ height: 100px;
+ text-align: center;animation: magic 1s alternate; 
+ animation-iteration-count: infinite;
+}rames magic {
+ 0% {background-color: blue;
+ border:5px solid white;
+ border-radius: 5%;}
+ 50% {background-color: red;
+ border: 2px dotted magenta;
+ transform: translate(450px,350px) rotate3d(.5, .75, .90, 100deg) scale(1,3);}
+ 100% {background-color: yellow;
+ border: 10px dashed black;
+ border-radius: 50%;
+ transform: translate(800px,50px) rotate3d(.5, .6, .7, -175deg) scale(.2,.3)}
