--- a/box.css
+++ b/box.css
@@ -1,21 +1,25 @@
  body {
   background-color: black;
   }
+
 #box {
  width: 100px;
  height: 100px;
  text-align: center;
  
  animation: magic 1s alternate; 
- animation-iteration-count: infinite;}
-@keyframes magic {round-color: blue;
- border:5px solid white;
- border-radius: 5%;}
+ animation-iteration-count: infinite;
+ }
+
+@keyframes magic {
+  0% {background-color: blue;
+    border:5px solid white;
+   border-radius: 5%;}
  50% {background-color: red;
- border: 2px dotted magenta;
- transform: translate(450px,350px) rotate3d(.5, .75, .90, 100deg) scale(1,3);}
+  border: 2px dotted magenta;
+  transform: translate(450px,350px) rotate3d(.5, .75, .90, 100deg) scale(1,3);}
  100% {background-color: yellow;
- border: 10px dashed black;
- border-radius: 50%;
- transform: translate(800px,50px) rotate3d(.5, .6, .7, -175deg) scale(.2,.3)}
+   border: 10px dashed black;
+   border-radius: 50%;
+  transform: translate(800px,50px) rotate3d(.5, .6, .7, -175deg) scale(.2,.3)}
 }
